# lib/db/src/schema/index.ts
@@ -4,4 +4,3 @@ export * from "./brochures";
 export * from "./priceLists";
 export * from "./applications";
 export * from "./orderForms";
-export * from "./analytics";
